--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -66,38 +66,111 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 
 body {
-	width: 880px;
+    width: 880px;
+    margin: auto;
 }
 
 a {
-	display: inline-block;
-	margin: 30px;
 	font-size: 14px;
 	color: gray;
-}
-
-.logo {
-	margin-left: 20px;
-}
-
-.Innovation {
 	display: inline-block;
-	width: 45%;
-	height: 379px;
-	font-size: 48px;
+	width: 111px;
+	height: 41px;
 	text-align: center;
-	padding: 80px;
+	vertical-align: middle;
+	/* border: 1px solid gray; */
 }
 
-.CodeCircle {
+.nav_bar {
+	/* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	margin-bottom: 5%;
+}
+
+.content_1 {
+    /* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	margin-bottom: 5%;
+}
+
+.content_1_box {
+	/* border: 2px solid blue; */
 	display: inline-block;
-	width: 50%;
-	height: 380px;
-	float: right;
+	margin: 1%;
+	width: 47%;
+	vertical-align: middle;
 }
 
-.get {
-	font-size: 12px;
-	border: 
+.innovation {
+	text-align: center;
+	font-size: 72px;
 }
 
+.content_1 a {
+	color: black;
+	border: 1px solid black;
+	text-align: center;
+	margin-left: 37.5%;
+	margin-right: 37.5%;
+	padding-top: 12px;
+	margin-bottom: 12px;
+}
+
+.content_2 {
+    /* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	margin-bottom: 5%;
+	border-top: 1px solid black;
+}
+
+.content_2_box {
+	/* border: 2px solid blue; */
+	display: inline-block;
+	margin: 1%;
+	width: 47%;
+	margin-top: 5%;
+}
+
+.middle-img {
+	margin: 1%;
+}
+
+.content_3 {
+    /* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	margin-bottom: 5%;
+	margin-top: 5%;
+	border-bottom: 1px solid black;
+}
+
+.content_3_box {
+	/* border: 2px solid blue; */
+	display: inline-block;
+	margin: 1%;
+	margin-bottom: 5%;
+	width: 31%;
+}
+
+.contact {
+	/* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	margin-bottom: 5%;
+}
+
+.contact div{
+	padding-top: 16px;
+}
+
+footer{
+	/* border: 2px solid red; */
+    margin: 1%;
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
+	margin-bottom: 15%;
+}
